-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.11.0-rc1
-
None
-
-
b526d789cf19deacbc61530a76f97704f941c883 (qt-creator/qt-creator/4.11), 864e79980bb24f0f58ff2294efda7c2bc0ab33a1
Boot2Qt 5.14.0
Creator doesn't create the deploy command properly.

When restarting Qt Creator and reopening the same project, then the "Executable on device" is populated correctly.
Same thing happens for Remote Linux and Boot2Qt Kits
| For Gerrit Dashboard: QTCREATORBUG-23315 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 284228,2 | RemoteLinux: Add RemoteLinuxRunConfiguration::doAdditionalSetup() | 4.11 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 284488,2 | Boot2Qt: Add QdbRunConfiguration::doAdditionalSetup() | 4.11 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |