RemoteLinux: Add RemoteLinuxRunConfiguration::doAdditionalSetup()

This became necessary after commit b1dbd7e358, because now run
configurations are created after parsing has finished, so they will not
initially receive the signals that cause them to update their target
information.

Fixes: QTCREATORBUG-23315
Change-Id: I761e5a5bd4ed6015037f562c10792fe16147739a
Reviewed-by: hjk <hjk@qt.io>